--- a/manifestMAGIX.json
+++ b/manifestMAGIX.json
@@ -192,8 +192,33 @@
 			"Tags": ""
 		},
 		{
-			"Address": "37.230.228.30",
-			"Port": 35000,
+			"Address": "80.242.59.205",
+			"Port": 28021,
+			"Tags": ""
+		},
+		{
+			"Address": "80.242.59.205",
+			"Port": 28023,
+			"Tags": ""
+		},
+		{
+			"Address": "80.242.59.205",
+			"Port": 28025,
+			"Tags": ""
+		},
+		{
+			"Address": "80.242.59.205",
+			"Port": 28027,
+			"Tags": ""
+		},
+		{
+			"Address": "80.242.59.205",
+			"Port": 28029,
+			"Tags": ""
+		},
+		{
+			"Address": "80.242.59.205",
+			"Port": 28031,
 			"Tags": ""
 		},
 		{
